# ref_clone

./: Cargo.toml  Functor.rs  functor.rs  hkt.md
ref_clone/: Cargo.toml
ref_clone/src/: lib.rs  traits.rs
ref_clone_derive/: Cargo.toml
ref_clone_derive/src/: lib.rs
ref_clone_test/: Cargo.toml
ref_clone_test/src/: lib.rs
