[package]
name = "ref_clone_derive"
version = "0.5.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
edition = "2018"
license = "MIT"
description = "Macros to help with the use of ref_clone."
repository = "https://github.com/iMplode-nZ/ref_clone/"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
ref_clone = "0.4.0"
proc-macro2 = "1.0.19"
